Hide not-published forms in list

--- a/forms_builder/forms/templates/forms/forms_list.html
+++ b/forms_builder/forms/templates/forms/forms_list.html
@@ -1,3 +1,3 @@
-{% for form in forms_list.forms.all %}
+{% for form in forms.all %}
 	<a href="{{ form.get_absolute_url }}"> {{ form }} </a>
 {% endfor %}
